--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -8,3 +8,6 @@ default-command = "log"
 [revsets]
 log = "::@"
 
+[aliases]
+sync = ['git', 'fetch', '--all-remotes']
+evolve = ['rebase', '--skip-emptied', '-d']
