--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set-option -g allow-rename off
 
 bind -n M-H previous-window
 bind -n M-L next-window
@@ -15,9 +16,29 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'tmux-plugins/tmux-battery'
+#set -g @plugin 'jimeh/tmuxifier'
 
 
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W"
 
+
+#
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#[bg=#{@thm_flamingo},fg=#{@thm_crust}]#[reverse]#[noreverse]󱀙  "
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_uptime}"
+#set -g status-right "#{E:@catppuccin_status_battery}"
+set -g status-right "#[bg=#{@thm_flamingo},fg=#{@thm_crust}]#[reverse]#[noreverse]#{battery_icon} #{battery_percentage} "
+# Or, if using TPM, just run TPM
+
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 run '~/.config/tmux/plugins/tpm/tpm'
+
 
