--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,9 +34,9 @@ monitor=,highres,auto,1,transform,3
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
-$fileManager = dolphin
-$menu = wofi --show drun
+$terminal = kitty
+$fileManager = nautilus
+$menu = tofi-drun | sh
 
 
 #################
@@ -46,9 +46,10 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = [workspace 1 silent] $terminal
+exec-once = waybar & hyprpaper
+exec-once = [workspace 2 silent] google-chrome-stable
+exec-once = [workspace 3 silent] kitty ~/scripts/sixense.sh
 
 
 #############################
