--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,9 +24,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,1,transform,3
-
-
+monitor=eDP-1,preferred,auto,1,mirror, DP-1
+monitor=DP-1,preferred,auto,1
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -47,7 +46,7 @@ $menu = tofi-drun | sh
 # Or execute your favorite apps at launch like this:
 
 exec-once = [workspace 1 silent] $terminal
-exec-once = waybar & hyprpaper
+exec-once = waybar & hyprpaper & swaync
 exec-once = [workspace 2 silent] google-chrome-stable
 exec-once = [workspace 3 silent] kitty ~/scripts/sixense.sh
 
@@ -58,8 +57,8 @@ exec-once = [workspace 3 silent] kitty ~/scripts/sixense.sh
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 
 
 #####################
@@ -214,13 +213,17 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, R, exec, wf-recorder -g "$(slurp)" -f "$(xdg-user-dir VIDEOS)/$(date +'recording_%Y-%m-%d-%H%M%S.mp4')" &>/dev/null
+bind = $mainMod SHIFT, P, exec, hyprshot -m region --clipboard-only
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -277,6 +280,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+bindl=,switch:Lid Switch, exec, hyprlock
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
