--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -10,15 +10,17 @@
     "custom/reboot",
     "custom/power"
   ],
-  // "modules-center": [
-  //   "hyprland/window"
-  // ],
+  "modules-center": [
+    // "hyprland/window"
+    "custom/recorder"
+  ],
   "modules-right": [
     "network",
     "battery",
     "bluetooth",
     "pulseaudio",
     "backlight",
+    "power-profiles-daemon",
     "memory",
     "cpu",
     "custom/temperature",
@@ -85,11 +87,11 @@
     "tooltip-format": "Poweroff"
   },
   "network": {
-    "format-wifi": "<span color='#00FFFF'> 󰤨 </span>{essid} ",
-    "format-ethernet": "<span color='#7FFF00'> </span>Wired ",
-    "tooltip-format": "<span color='#FF1493'> 󰅧 </span>{bandwidthUpBytes}  <span color='#00BFFF'> 󰅢 </span>{bandwidthDownBytes}",
-    "format-linked": "<span color='#FFA500'> 󱘖 </span>{ifname} (No IP) ",
-    "format-disconnected": "<span color='#FF4040'>  </span>Disconnected ",
+    "format-wifi": "<span color='#00FFFF'> 󰤨  </span>{essid} ",
+    "format-ethernet": "<span color='#7FFF00'>   </span>Wired ",
+    "tooltip-format": "<span color='#FF1493'> 󰅧  </span>{bandwidthUpBytes}  <span color='#00BFFF'> 󰅢 </span>{bandwidthDownBytes}",
+    "format-linked": "<span color='#FFA500'> 󱘖  </span>{ifname} (No IP) ",
+    "format-disconnected": "<span color='#FF4040'>   </span>Disconnected ",
     // "format-alt": "<span color='#00FFFF'> 󰤨 </span>{signalStrength}% ",
     "interval": 1,
     "on-click": "kitty nmtui"
@@ -135,7 +137,7 @@
   "memory": {
     "format": "<span color='#8A2BE2'>  </span>{used:0.1f}G/{total:0.1f}G ",
     "tooltip": true,
-    "tooltip-format": "Network: {used:0.2f}G/{total:0.2f}G"
+    "tooltip-format": "Memory: {used:0.2f}G/{total:0.2f}G"
   },
   "cpu": {
     "format": "<span color='#FF9F0A'>  </span>{usage}% ",
@@ -150,7 +152,7 @@
   },
   "clock": {
     "interval": 1,
-    "timezone": "Asia/Chengdu",
+    "timezone": "Europe/Paris",
     "format": "<span color='#BF00FF'>  </span>{:%H:%M} ",
     "tooltip": true,
     "tooltip-format": "{:L%A %d/%m/%Y}"
@@ -184,5 +186,24 @@
     // "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
     "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_battery_percentage}%",
     "on-click": "kitty bluetuith"
+  },
+  "custom/recorder": {
+    "format": "<span color='#FF4040'>   Recording...</span> ",
+    "return-type": "json",
+    "interval": 1,
+    "exec": "echo '{\"class\": \"recording\"}'",
+    "exec-if": "pgrep wf-recorder",
+    "on-click": "pkill --signal SIGINT wf-recorder"
+  },
+  "power-profiles-daemon": {
+    "format": "<span>{icon}</span>",
+    "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+    "tooltip": true,
+    "format-icons": {
+      "default": "<span color='#00FF7F'> </span>",
+      "performance": "<span color='#FF4040'> </span> Performance",
+      "balanced": "<span color='#00BFFF'> </span> Balanced",
+      "power-saver": "<span color='#00FF7F'> 󰌪</span> Power-saver"
+    }
   }
 }
