add x1carbon config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $menu = tofi-drun | sh
 # Or execute your favorite apps at launch like this:
 
 exec-once = [workspace 1 silent] $terminal
-exec-once = waybar & hyprpaper & swaync
+exec-once = waybar & hyprpaper & hypridle & swaync
 exec-once = [workspace 2 silent] google-chrome-stable
 exec-once = [workspace 3 silent] kitty ~/scripts/sixense.sh
 
@@ -166,7 +166,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -177,9 +177,9 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant =altgr-intl
     kb_model =
-    kb_options =
+    kb_options = grp:caps_toggle
     kb_rules =
 
     follow_mouse = 1
