--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -16,14 +16,14 @@ general {
 }
 
 # uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
+ auth {
+     fingerprint {
+         enabled = true
+         ready_message = Scan fingerprint to unlock
+         present_message = Scanning...
+         retry_delay = 250 # in milliseconds
+     }
+ }
 
 animations {
     enabled = true
@@ -35,7 +35,8 @@ animations {
 
 background {
     monitor =
-    path = screenshot
+    path = ~/.config/backgrounds/IT_guy.png
+    # path = screenshot
     blur_passes = 3
 }
 
