--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/backgrounds/pywallpaper.jpg
-wallpaper = , ~/.config/backgrounds/pywallpaper.jpg
+preload = ~/.config/backgrounds/IT_guy.png
+wallpaper = , ~/.config/backgrounds/IT_guy.png
