--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,11 +45,10 @@ $menu = tofi-drun | sh
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = [workspace 1 silent] $terminal
 exec-once = waybar & hyprpaper & hypridle & swaync
+exec-once = [workspace 1 silent] kitty ~/scripts/sixense.sh
 exec-once = [workspace 2 silent] google-chrome-stable
-exec-once = [workspace 3 silent] kitty ~/scripts/sixense.sh
-
+exec-once = [workspace 3 silent] google-chrome-stable  --app=https://teams.microsoft.com/v2/
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -221,6 +220,10 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+bind = $mainMod SHIFT, W, exec, pkill waybar && hyprctl dispatch exec waybar
+
+
+
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod SHIFT, R, exec, wf-recorder -g "$(slurp)" -f "$(xdg-user-dir VIDEOS)/$(date +'recording_%Y-%m-%d-%H%M%S.mp4')" &>/dev/null
 bind = $mainMod SHIFT, P, exec, hyprshot -m region --clipboard-only
@@ -283,7 +286,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 bindl=,switch:Lid Switch, exec, hyprlock
 
-
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
