--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,6 +59,7 @@ exec-once = [workspace 3 silent] google-chrome-stable  --app=https://teams.micro
 # env = XCURSOR_SIZE,24
 # env = HYPRCURSOR_SIZE,24
 
+env = XDG_CURRENT_DESKTOP,Hyprland
 
 #####################
 ### LOOK AND FEEL ###
